--- a/data/ancestryfeatures/feat-01-egpiSWBrNBb1Fmig.htm
+++ b/data/ancestryfeatures/feat-01-egpiSWBrNBb1Fmig.htm
@@ -1,7 +1,6 @@
 Name: Draconic Exemplar
 Nom: Modèle draconique
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You draw minor powers from your draconic exemplar. Choose a type of chromatic or metallic dragon to be your exemplar. This determines your scale color and appearance, and dragons sometimes look more favorably upon those kobolds who resemble them, at the GM's discretion. Your exemplar may also determine details of other abilities you have, using the Draconic Exemplars table.</p>
@@ -81,73 +80,75 @@ Nom: Modèle draconique
 ------ Description (fr) ------
 <p>Vous tirez de votre modèle draconique des pouvoirs mineurs. Choisissez un type de dragon chromatique ou métallique comme étant votre modèle. Cela détermine la couleur de vos écailles et votre apparence. Les dragons voient parfois plus favorablement ceux des kobolds qui leur ressemblent à la discrétion du MJ. Votre modèle peut aussi déterminer les détails d'autres capacités que vous possédez, en utilisant la table des modèles draconiques ci-après.</p>
 <h3><strong>Table des Modèles draconiques</strong></h3>
-<table style="width: 365px; height: 170px;" border="1">
+<table class="pf2-table">
+<thead>
+<tr>
+<th>Dragon</th>
+<th>Forme du Souffle</th>
+<th>Type de Dégâts</th>
+<th>Jet de sauvegarde</th>
+</tr>
+</thead>
 <tbody>
-<tr style="height: 34px;">
-<td style="width: 61px; height: 34px;"><strong>Dragon</strong></td>
-<td style="width: 104px; height: 34px;"><strong>Forme du Souffle</strong></td>
-<td style="width: 86px; height: 34px;"><strong>Type de Dégâts</strong></td>
-<td style="width: 101px; height: 34px;"><strong>Jet de sauvegarde</strong></td>
+<tr>
+<td>Airain</td>
+<td>Ligne</td>
+<td>Feu</td>
+<td>Réflexes</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 61px; height: 17px;">Airain</td>
-<td style="width: 104px; height: 17px;">Ligne</td>
-<td style="width: 86px; height: 17px;">Feu</td>
-<td style="width: 101px; height: 17px;">Réflexes</td>
+<tr>
+<td>Argent</td>
+<td>Cône</td>
+<td>Froid</td>
+<td>Réflexes</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 61px;">Argent</td>
-<td style="width: 104px;">Cône</td>
-<td style="width: 86px;">Froid</td>
-<td style="width: 101px;">Réflexes</td>
+<tr>
+<td>Blanc</td>
+<td>Cône</td>
+<td>Froid</td>
+<td>Réflexes</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 61px; height: 17px;">Blanc</td>
-<td style="width: 104px; height: 17px;">Cône</td>
-<td style="width: 86px; height: 17px;">Froid</td>
-<td style="width: 101px; height: 17px;">Réflexes</td>
+<tr>
+<td>Bleu</td>
+<td>Ligne</td>
+<td>Électricité</td>
+<td>Réflexes</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 61px; height: 17px;">Bleu</td>
-<td style="width: 104px; height: 17px;">Ligne</td>
-<td style="width: 86px; height: 17px;">Électricité</td>
-<td style="width: 101px; height: 17px;">Réflexes</td>
+<tr>
+<td>Bronze</td>
+<td>Ligne</td>
+<td>Électricité</td>
+<td>Réflexes</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 61px; height: 17px;">Bronze</td>
-<td style="width: 104px; height: 17px;">Ligne</td>
-<td style="width: 86px; height: 17px;">Électricité</td>
-<td style="width: 101px; height: 17px;">Réflexes</td>
+<tr>
+<td>Cuivre</td>
+<td>Ligne</td>
+<td>Acide</td>
+<td>Réflexes</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 61px; height: 17px;">Cuivre</td>
-<td style="width: 104px; height: 17px;">Ligne</td>
-<td style="width: 86px; height: 17px;">Acide</td>
-<td style="width: 101px; height: 17px;">Réflexes</td>
+<tr>
+<td>Noir</td>
+<td>Ligne</td>
+<td>Acide</td>
+<td>Réflexes</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 61px; height: 17px;">Noir</td>
-<td style="width: 104px; height: 17px;">Ligne</td>
-<td style="width: 86px; height: 17px;">Acide</td>
-<td style="width: 101px; height: 17px;">Réflexes</td>
+<tr>
+<td>Or</td>
+<td>Cône</td>
+<td>Feu</td>
+<td>Réflexes</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 61px;">Or</td>
-<td style="width: 104px;">Cône</td>
-<td style="width: 86px;">Feu</td>
-<td style="width: 101px;">Réflexes</td>
+<tr>
+<td>Rouge</td>
+<td>Cône</td>
+<td>Feu</td>
+<td>Réflexes</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 61px; height: 17px;">Rouge</td>
-<td style="width: 104px; height: 17px;">Cône</td>
-<td style="width: 86px; height: 17px;">Feu</td>
-<td style="width: 101px; height: 17px;">Réflexes</td>
-</tr>
-<tr style="height: 17px;">
-<td style="width: 61px; height: 17px;">Vert</td>
-<td style="width: 104px; height: 17px;">Cône</td>
-<td style="width: 86px; height: 17px;">Poison</td>
-<td style="width: 101px; height: 17px;">Vigueur</td>
+<tr>
+<td>Vert</td>
+<td>Cône</td>
+<td>Poison</td>
+<td>Vigueur</td>
 </tr>
 </tbody>
 </table>
