--- a/data/backgrounds/iPuclSXdCEAVfTZ0.htm
+++ b/data/backgrounds/iPuclSXdCEAVfTZ0.htm
@@ -1,10 +1,8 @@
 Name: [Empty Background]
 Nom: [Historique vierge]
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>This is a blank background for homebrew. <span style="color: var(--body);">This provides no inherent automation but can be used as a drag and drop template on an actor.</span></p>
 ------ Description (fr) ------
-<p>Ceci est un historique vierge pour des règles maison.</p>
-<p>Ceci ne procure aucune automatisation mais peut être utilisé comme un modèle de base à partir duquel vous pourrez glisser déposer sur un acteur.</p>
+<p>Ceci est un historique vierge pour des règles maison. <span style="color: var(--body);">Ceci ne procure aucune automatisation mais peut être utilisé comme un modèle de base à partir duquel vous pourrez glisser déposer sur un acteur.</span></p>
