--- a/data/backgrounds/vE6nb2OSIXqprDXk.htm
+++ b/data/backgrounds/vE6nb2OSIXqprDXk.htm
@@ -1,7 +1,6 @@
 Name: Sally Guard Neophyte
 Nom: Néophyte de la Garde des Percées
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You joined the Sally Guard, Westgate's guard precinct, at an early age, bringing with you the requisite steel armor, sword, and lance, though your gear is of dubious make. The other guards may have suspected that you were a novice with less combat experience than them; if so, you proved their suspicions on your first day of training when your mount immediately threw you in the mud. A supervisor took mercy on you and offered to transfer you to another guard unit in the city, promising that you'd have a place on the Sally Guard when you decided you were ready for the challenge.</p>
