--- a/data/bestiary-ability-glossary-srd/nZMQh4AaBr291TUf.htm
+++ b/data/bestiary-ability-glossary-srd/nZMQh4AaBr291TUf.htm
@@ -1,7 +1,6 @@
 Name: Buck
 Nom: Désarçonner
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Most monsters that serve as mounts can attempt to buck off unwanted or annoying riders, but most mounts will not use this reaction against a trusted creature unless the mounts are spooked or mistreated.</p>
@@ -10,4 +9,4 @@ Nom: Désarçonner
 ------ Description (fr) ------
 <p>La plupart des monstres qui servent de monture peuvent tenter de désarçonner des cavaliers importuns ou agaçants. Les montures n’utiliseront généralement pas cette réaction contre une créature en qui elles ont confiance, sauf si elles prennent peur ou sont maltraitées.</p>
 <p><strong>Déclencheur</strong> Une créature @Compendium[pf2e.actionspf2e.PM5jvValFkbFH3TV]{Se met en selle} ou utilise l’action @Compendium[pf2e.actionspf2e.q9nbyIF0PEBqMtYe]{Diriger un animal} alors qu’elle monte le monstre. </p>
-<p><strong>Effet</strong> La créature déclencheur doit réussir un jet de sauvegarde de Réflexes contre le DD indiqué ou tomber de la créature et se retrouver @Compendium[pf2e.conditionspf2e.j91X7x0XSomq8d60]{À terre}. Si le jet de sauvegarde est un échec critique, la créature déclencheur subit [[/roll 1d6]] dégâts contondants en plus des dégâts causés par la chute.</p>
+<p><strong>Effet</strong> La créature déclencheuse doit réussir un jet de sauvegarde de Réflexes contre le DD indiqué ou tomber de la créature et se retrouver @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}. Si le jet de sauvegarde est un échec critique, la créature déclencheur subit [[/roll 1d6 #contondants]] dégâts contondants en plus des dégâts causés par la chute.</p>
