--- a/data/feats/ancestry-01-0YXRPqCaOQ3G73hh.htm
+++ b/data/feats/ancestry-01-0YXRPqCaOQ3G73hh.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You are adept at disguising coded messages as folksy idioms.
-Avantage: Vous avez l'art de déguiser des messages codés en idiomes populaires.
+Avantage: Vous avez l'art de déguiser des messages codés en expressions populaires.
 
 ------ Description (en) ------
 <p>You are adept at disguising coded messages as folksy idioms. Using slang, jokes, halfling loanwords, and the like, you convey a simple message consisting of three basic words (such as "Danger assassin flee" or "Meet me moonrise").</p>
