--- a/data/feats/ancestry-01-3J0NxeHcA1h9eToK.htm
+++ b/data/feats/ancestry-01-3J0NxeHcA1h9eToK.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have a powerful creative drive, useful for prevarication and performance.
-Avantage: Vous avez un puissant élan créatif, utile pour la prévarication et la performance.
+Avantage: Vous avez un puissant élan créatif, utile pour les faux fuyants et le spectacle.
 
 ------ Description (en) ------
 <p>You have a powerful creative drive, useful for prevarication and performance. You gain the trained proficiency rank in Deception and Performance. If you are already trained in either of these skills, you become trained in a skill of your choice in its place. You also become trained in Art Lore.</p>
 ------ Description (fr) ------
-<p>Vous avez une puissante conduite créative, utile pour les faux-fuyants et la représentation. Vous êtes qualifié en Duperie et en Représentation. Si vous êtes déjà qualifié dans chacune de ces compétences, vous êtes qualifié dans une compétence de votre  chois à sa place. Vous êtes qualifié en Connaissance de l'art.</p>
+<p>Vous avez une puissante conduite créative, utile pour les faux-fuyants et le spectacle. Vous êtes qualifié en Duperie et en Représentation. Si vous êtes déjà qualifié dans chacune de ces compétences, vous êtes qualifié dans une compétence de votre choix à sa place. Vous êtes qualifié en Connaissance de l'art.</p>
