--- a/data/feats/ancestry-01-3zr5Gt5LgHsMNpSO.htm
+++ b/data/feats/ancestry-01-3zr5Gt5LgHsMNpSO.htm
@@ -2,12 +2,11 @@ Name: Gnome Weapon Familiarity
 Nom: Familiarité avec les armes gnomes
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You favor unusual weapons tied to your people, such as blades with curved and peculiar shapes.
-Avantage: Vous préférez les armes inhabituelles liées à votre peuple, comme les lames aux formes courbes et particulières.
+Avantage: Vous appréciez tout particulièrement les armes étranges liées à votre peuple, comme les lames incurvées de forme singulière.
 
 ------ Description (en) ------
 <p>You favor unusual weapons tied to your people, such as blades with curved and peculiar shapes. You are trained with the glaive and kukri.</p>
