--- a/data/feats/ancestry-01-AjdmoGFoSIyx1mxd.htm
+++ b/data/feats/ancestry-01-AjdmoGFoSIyx1mxd.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You are accustomed to working alongside others, relying on each other to get by.
-Avantage: Vous avez l'habitude de travailler aux côtés des autres, de compter les uns sur les autres pour vous en sortir.
+Avantage: Vous obtenez un bonus de +2 lorsqu'il faut aider ou être aidé.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Jaric ethnicity<br /></p>
