--- a/data/feats/ancestry-01-AlhyF8LCW011w9kq.htm
+++ b/data/feats/ancestry-01-AlhyF8LCW011w9kq.htm
@@ -6,9 +6,9 @@ PrereqFR: héritage gobelin incassable
 
 ------ Benefits and spoiler ----
 Benefits: You have a particular elasticity that makes it easy for you to bounce and squish.
-Avantage: Tu as une élasticité particulière qui te permet de rebondir et de t'écraser facilement.
+Avantage: Vous avez une élasticité particulière qui vous permet de rebondir et de vous faufiler facilement.
 
 ------ Description (en) ------
 <p>You have a particular elasticity that makes it easy for you to bounce and squish. You gain the trained proficiency rank in Acrobatics (or another skill of your choice, if you were already trained in Acrobatics). You also gain a +2 circumstance bonus to Acrobatics checks to Tumble Through a foe's space.</p>
 ------ Description (fr) ------
-<p>Vous jouissez d'une élasticité particulière qui vous permet de rebondir ou de vous serrer facilement. Vous êtes qualifié en Acrobaties (ou une autre compétence de votre choix, si vous étiez ddéjà qualifié en Acrobaties). Vous obtenez aussi un bonus de circonstances de +2 circumstance aux tests d'Acrobaties pour effectuer un Déplacement acrobatique pour tenter de traverser l'espace occupé par un adversaire.</p>
+<p>Vous jouissez d'une élasticité particulière qui vous permet de rebondir ou de vous faufiler facilement. Vous êtes qualifié en Acrobaties (ou une autre compétence de votre choix, si vous étiez ddéjà qualifié en Acrobaties). Vous obtenez aussi un bonus de circonstances de +2 circumstance aux tests d'Acrobaties pour effectuer un Déplacement acrobatique pour tenter de traverser l'espace occupé par un adversaire.</p>
