--- a/data/feats/ancestry-01-akCO62yBCJLjjCZJ.htm
+++ b/data/feats/ancestry-01-akCO62yBCJLjjCZJ.htm
@@ -6,12 +6,12 @@ PrereqFR: Vision nocturne
 
 ------ Benefits and spoiler ----
 Benefits: You can see through darkness.
-Avantage: Vous pouvez voir à travers l'obscurité.
+Avantage: Vous pouvez percer l'obscurité.
 
 ------ Description (en) ------
 <p>You can see through darkness. You gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision}.</p>
 <p><strong>Special</strong> You can select this feat only at 1st level, and you can't retrain into or out of this feat.</p>
 ------ Description (fr) ------
-<p>Vous pouvez voir à travers l'obscurité. Vous obtenez @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Vision dans le noir}.</p>
+<p>Vous pouvez percer l'obscurité. Vous obtenez @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Vision dans le noir}.</p>
 <hr />
 <p><strong>Spécial</strong> Vous ne pouvez choisir ce don qu'au niveau 1 et vous ne pouvez ni l'obtenir, ni le perdre par le biais du réapprentissage.</p>
