--- a/data/pathfinder-bestiary/4BBzo72pHOpecoIp.htm
+++ b/data/pathfinder-bestiary/4BBzo72pHOpecoIp.htm
@@ -1,9 +1,9 @@
 Name: Goblin War Chanter
-Nom: Chantre de guerre gobelin
-État: changé
+Nom: Chantre de guerre Gobelin
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 While all goblins enjoy singing, goblin war chanters pride themselves on mastering the art of vocal performance. Their ballads and jingles are undeniably catchy, though whether they are actually enjoyable is entirely subjective.<br /><br />
 ------ Description (fr) ------
-Bien que tous les gobelins aiment chanter, les chantres de guerre s’enorgueillissent de maîtriser l’art de la performance vocale. Leurs ballades et ritournelles sont indéniablement entraînantes mais quant à savoir si elles sont agréables, tout est une question de point de vue.
+Bien que tous les gobelins aiment chanter, les Chantres de guerre s’enorgueillissent de maîtriser l’art de la performance vocale. Leurs ballades et ritournelles sont indéniablement entraînantes mais quant à savoir si elles sont agréables, tout est une question de point de vue.
