--- a/data/pathfinder-bestiary/4htFfofrXLkbWMRg.htm
+++ b/data/pathfinder-bestiary/4htFfofrXLkbWMRg.htm
@@ -1,9 +1,9 @@
 Name: Bugbear Thug
 Nom: Brute gobelours
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 The more common bugbear thug specializes in the art of lurking in the shadows.<br /><br />
 ------ Description (fr) ------
-Les brutes gobelours les plus communes sont spécialisées dans l’art de se cacher dans les ombres.<br><br>
+Les Brutes Gobelours les plus communes sont spécialisées dans l’art de se cacher dans les ombres.<br><br>
