--- a/data/pathfinder-bestiary-2/PKAs8bMBMpnegmwq.htm
+++ b/data/pathfinder-bestiary-2/PKAs8bMBMpnegmwq.htm
@@ -1,8 +1,8 @@
 Name: Badger
-Nom: 
+Nom: Blaireau
 État: auto-trad
 
 ------ Description (en) ------
 The typical badger has dark, brownish-gray fur highlighted with white markings, particularly on the head, giving it a striped mask of fur around its eyes. A threatened badger can swiftly become a ferocious combatant that typically fights until slain.<br /><br />
 ------ Description (fr) ------
-Le blaireau typique a une fourrure sombre, gris brunâtre, rehaussée de marques blanches, notamment sur la tête, ce qui lui donne un masque de fourrure rayé autour des yeux. Un blaireau menacé peut rapidement devenir un combattant féroce qui se bat généralement jusqu'à ce qu'il soit tué ;
+Le Blaireau typique a une fourrure sombre, gris brunâtre, rehaussée de marques blanches, notamment sur la tête, ce qui lui donne un masque de fourrure rayé autour des yeux. Un blaireau menacé peut rapidement devenir un combattant féroce qui se bat généralement jusqu'à ce qu'il soit tué.
