--- a/data/pathfinder-bestiary-2/PKAs8bMBMpnegmwq.htm
+++ b/data/pathfinder-bestiary-2/PKAs8bMBMpnegmwq.htm
@@ -1,6 +1,6 @@
 Name: Badger
 Nom: Blaireau
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 The typical badger has dark, brownish-gray fur highlighted with white markings, particularly on the head, giving it a striped mask of fur around its eyes. A threatened badger can swiftly become a ferocious combatant that typically fights until slain.<br /><br />
