--- a/data/pathfinder-bestiary/5pk6bfodgnllSIOy.htm
+++ b/data/pathfinder-bestiary/5pk6bfodgnllSIOy.htm
@@ -1,6 +1,6 @@
 Name: Giant Flytrap
 Nom: Attrape-mouche géant
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
