--- a/data/pathfinder-bestiary/6eabIbxzYepfZAHX.htm
+++ b/data/pathfinder-bestiary/6eabIbxzYepfZAHX.htm
@@ -1,9 +1,9 @@
 Name: Ice Linnorm
 Nom: Linnorm des glaces
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 The ice linnorm dwells amid glacial crevasses, atop wind-blasted mountain peaks, or within glittering caverns carved from the hearts of the mightiest of icebergs.<br /><br />
 ------ Description (fr) ------
-Le linnorm des glaces réside dans les crevasses des glaciers, les pics battus par les vents et les cavernes scintillantes creusées au cœur de gigantesques icebergs.
+Le Linnorm des glaces réside dans les crevasses des glaciers, les pics battus par les vents et les cavernes scintillantes creusées au cœur de gigantesques icebergs.
