--- a/data/pathfinder-bestiary/8BloAdRqlLpt5bNg.htm
+++ b/data/pathfinder-bestiary/8BloAdRqlLpt5bNg.htm
@@ -1,6 +1,6 @@
 Name: Treerazer
 Nom: Fléau des arbres
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
