--- a/data/pathfinder-bestiary/9X7hOvCKy1bqw0g6.htm
+++ b/data/pathfinder-bestiary/9X7hOvCKy1bqw0g6.htm
@@ -1,9 +1,9 @@
 Name: Giant Tarantula
 Nom: Tarentule géante
-État: changé
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 Tarantulas are ambush predators, but will attack prey in the open.<br /><br />
 ------ Description (fr) ------
-Les tarentules sont des prédatrices embusquées mais elles peuvent aussi attaquer leurs proies à découvert. <br><br>
+Les Tarentules sont des prédatrices embusquées mais elles peuvent aussi attaquer leurs proies à découvert. <br><br>
