--- a/data/equipment/weapon-10-T1L6XbgMqJLDv2Pi.htm
+++ b/data/equipment/weapon-10-T1L6XbgMqJLDv2Pi.htm
@@ -27,16 +27,11 @@ Nom: Bâton de la providence supérieur
 <p> <strong>Activation</strong> Lancer un sort</p>
 <p> <strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
-<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{assistance divine}, @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{lumiere}</li>
-<li><strong>Niveau 1</strong> @@Compendium[pf2e.spells-srd.XSujb7EsSwKl19Uu]{bénédiction}, @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{création d'eau}</li>
+<li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{assistance divine}, @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{lumiere}</li>
+<li><strong>Niveau 1</strong> @Compendium[pf2e.spells-srd.XSujb7EsSwKl19Uu]{bénédiction}, @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{création d'eau}</li>
 <li><strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{augure}, @Compendium[pf2e.spells-srd.Mt6ZzkVX8Q4xigFq]{création de nourriture}, @Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{détection de l'invisibilité}, @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{rapport}</li>
 <li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.IFuEzfmmWyNwVbhY]{passage sûr}, @Compendium[pf2e.spells-srd.ppA1StEigPLKEQqR]{guide du pélerin}</li>
 <li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.OyFCwQuw8XRazsNr]{délivrance des malédictions}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}, @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{rapport}</li>
-<li><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.Ek5XI0aEdZhBgm21]{Œil indiscret}, @Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{étection de l'invisibilité}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
-<li><strong>Niveau 6</strong> @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}, @Compendium[pf2e.spells-srd.9W2Qv0wXLg6tQg3y]{précaution scintillante}, @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{vision lucide}</li>
-<li><strong>Niveau 7</strong> @Compendium[pf2e.spells-srd.m2xFMNyQiUKQDRaj]{égide énergétique}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
-<li><strong>Niveau 8</strong> @Compendium[pf2e.spells-srd.KtTGLbLG9nqMbUYL]{inspiration divine}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
-<li><strong>Niveau 9</strong> @Compendium[pf2e.spells-srd.qsNeG9KZpODSACMq]{prémonition}, @Compendium[pf2e.spells-srd.fkDeKktdmbeplYRY]{présence écrasante}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
 </ul>
 <p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
 <h />
