--- a/data/equipment/weapon-20-pIagOwW8EFBaKW3k.htm
+++ b/data/equipment/weapon-20-pIagOwW8EFBaKW3k.htm
@@ -29,10 +29,10 @@ Nom: Bâton de la providence ultime
 ------ Description (fr) ------
 <p>Un grand symbole stylisé d'un œil orne le haut de ce bâton en bois, représentant l'œil vigilant des pouvoirs divins. Le porteur du personnel peut guider et protéger, et voir des primes et des tragédies pouvant le toucher dans le futur.</p>
 <p>Quand vous maniez ce bâton, vous gagnez un bonus d'objet de +1 sur les test de Survie pour s'orienter ou subsister, ainsi qu'aux tests de Religion pour se souvenir.</p>
-<p> <strong>Activation</strong> Lancer un sort</p>
-<p> <strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
+<p><strong>Activation</strong> Lancer un sort</p>
+<p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
-<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{assistance divine}, @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{lumiere}</li>
+<li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{assistance divine}, @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{lumiere}</li>
 <li><strong>Niveau 1</strong> @@Compendium[pf2e.spells-srd.XSujb7EsSwKl19Uu]{bénédiction}, @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{création d'eau}</li>
 <li><strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{augure}, @Compendium[pf2e.spells-srd.Mt6ZzkVX8Q4xigFq]{création de nourriture}, @Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{détection de l'invisibilité}, @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{rapport}</li>
 <li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.IFuEzfmmWyNwVbhY]{passage sûr}, @Compendium[pf2e.spells-srd.ppA1StEigPLKEQqR]{guide du pélerin}</li>
@@ -44,7 +44,7 @@ Nom: Bâton de la providence ultime
 <li><strong>Niveau 9</strong> @Compendium[pf2e.spells-srd.qsNeG9KZpODSACMq]{prémonition}, @Compendium[pf2e.spells-srd.fkDeKktdmbeplYRY]{présence écrasante}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
 </ul>
 <p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
-<h />
+<hr />
 <p>Effets appliqués automatiquement: </p>
 <ul>
 <li>+1 bonus d'objet aux tests de Survie pour S'Orienter ou Subsister,</li>
