--- a/data/pathfinder-bestiary/b6qiHvyx6ymROTBL.htm
+++ b/data/pathfinder-bestiary/b6qiHvyx6ymROTBL.htm
@@ -1,9 +1,9 @@
 Name: Deep Gnome Warrior
-Nom: Guerrier gnome des profondeurs
-État: changé
+Nom: Guerrier Gnome des profondeurs
+État: officielle
 État d'origine: officielle
 
 ------ Description (en) ------
 Deep gnome warriors are quick to charge into battle but focus on defending their kin and their homes over more aggressive tactics when a choice is available.<br /><br />
 ------ Description (fr) ------
-Les guerriers gnomes des profondeurs sont prompts à charger dans un combat mais quand ils ont le choix, au lieu d’avoir recours aux stratégies les plus agressives, ils privilégient la défense de leur peuple et de leurs foyers.<br><br>
+Les guerriers Gnomes des profondeurs sont prompts à charger dans un combat mais quand ils ont le choix, au lieu d’avoir recours aux stratégies les plus agressives, ils privilégient la défense de leur peuple et de leurs foyers.<br><br>
