--- a/data/feats/ancestry-01-Ffi8L4EDO5OH5tpA.htm
+++ b/data/feats/ancestry-01-Ffi8L4EDO5OH5tpA.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your legs end in hooves rather than feet, with joints and tendons that allow you to move with great haste.
-Avantage: Vos jambes se terminent par des sabots plutôt que des pieds, avec des articulations et des tendons qui vous permettent de vous déplacer avec une grande rapidité.
+Avantage: Votre Vitesse augmente de 1,5 m
 
 ------ Description (en) ------
 <p>Your legs end in hooves rather than feet, with joints and tendons that allow you to move with great haste. Your Speed increases by 5 feet.</p>
@@ -16,10 +16,10 @@ Avantage: Vos jambes se terminent par des sabots plutôt que des pieds, avec des
 <li>+5 untyped bonus to land speed</li>
 </ul>
 ------ Description (fr) ------
-<p>Vos jambes se terminent par des sabots plutôt que des pieds, avec des jointures et des tendons qui permettent d'augmenter votre vitesse de déplacement de 1,5m.</p>
+<p>Vos jambes se terminent par des sabots plutôt que des pieds, avec des jointures et des tendons qui permettent d'augmenter votre vitesse de déplacement de 1,5 m.</p>
 <hr />
 <p><strong>Spécial</strong> L'augmentation de vitesse de ce don n'est pas cumulable avec une autre augmentation liée à vos dons ancestraux (comme Elfe preste).</p>
-<p>Effets automatiquement appliqués (Foundry) :</p>
+<p>Effet automatiquement appliqué (Foundry) :</p>
 <ul>
 <li>bonus non typé de +5 à votre Vitesse au sol</li>
 </ul>
