--- a/data/feats/ancestry-01-f6VPqhOPW9XfBKDr.htm
+++ b/data/feats/ancestry-01-f6VPqhOPW9XfBKDr.htm
@@ -2,12 +2,11 @@ Name: Virga May
 Nom: Vierge Virga
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Born of a storm hag, you have one crystal-blue or rain-gray eye.
-Avantage: Né d'une sorcière des tempêtes, vous avez un œil bleu cristal ou gris pluie.
+Avantage: Vous pouvez lancer le tour de magie Arc électrique.
 
 ------ Description (en) ------
 <p>Born of a storm hag, you have one crystal-blue or rain-gray eye. You share your mother’s power over wind and storm. You can cast @Compendium[pf2e.spells-srd.kBhaPuzLUSwS6vVf]{Electric Arc} as an occult innate cantrip. As normal, a cantrip is heightened to a spell level equal to half your level rounded up.</p>
