--- a/data/feats/ancestry-01-GEvaoKgQteMrd4ub.htm
+++ b/data/feats/ancestry-01-GEvaoKgQteMrd4ub.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You hear the sounds of reptiles as language.
-Avantage: Vous entendez les sons des reptiles comme un langage.
+Avantage: Vous comprenez les sons que font les reptiles comme s'il s'agissait d'une langue.
 
 ------ Description (en) ------
 <p>You hear the sounds of reptiles as language. You can ask questions of, receive answers from, and use the Diplomacy skill with animals that are reptiles (the GM determines which animals count as reptiles).</p>
 ------ Description (fr) ------
-<p>Vous comprenez les sons produits par les reptiles comme un langage.</p>
+<p>Vous comprenez les sons produits par les reptiles comme s'il s'agissait d'une langue.</p>
 <p>Vous pouvez leur poser des questions, recevoir des réponses et utiliser la compétence Diplomatie avec les animaux qui sont des reptiles (Le MJ détermine quels animaux comptent parmi les reptiles).</p>
