--- a/data/feats/ancestry-01-fYVFBnv9aVHv1UNg.htm
+++ b/data/feats/ancestry-01-fYVFBnv9aVHv1UNg.htm
@@ -2,12 +2,11 @@ Name: Leshy Superstition
 Nom: Superstition léchi
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You notice spirits that inhabit objects, learning which bring good fortune and which are unlucky.
-Avantage: Vous remarquez les esprits qui habitent les objets, vous apprenez lesquels portent bonheur et lesquels portent malheur.
+Avantage: Les esprits des objets vous portent bonheur.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You attempt a saving throw against a spell or magical effect, but haven't rolled yet.<br /></p>
