--- a/data/feats/ancestry-01-g388ImzpenYBoiEF.htm
+++ b/data/feats/ancestry-01-g388ImzpenYBoiEF.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You know that the greatest treasures often look like refuse, and you scoff at those who throw away perfectly good scraps.
-Avantage: Vous savez que les plus grands trésors ressemblent souvent à des déchets, et vous vous moquez de ceux qui jettent des déchets en parfait état.
+Avantage: Vous pouvez subsister et gagner de l'argent à partir des déchets des villes.
 
 ------ Description (en) ------
 <p>You know that the greatest treasures often look like refuse, and you scoff at those who throw away perfectly good scraps. You gain a +1 circumstance bonus to checks to Subsist, and you can use Society or Survival when you Subsist in a settlement. When you Subsist in a city, you also gather valuable junk that silly longshanks threw away. You can Earn Income using Society or Survival in the same time as you Subsist, without spending any additional days of downtime. You also gain a +1 circumstance bonus to this check.</p>
