--- a/data/feats/ancestry-01-gsDDw5KAb7qlPkms.htm
+++ b/data/feats/ancestry-01-gsDDw5KAb7qlPkms.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Choose one cantrip from the occult spell list .
-Avantage: Choisissez un sort dans la liste des sorts occultes.
+Avantage: Vous obtenez un tour de magie occulte.
 
 ------ Description (en) ------
 <p>Choose one cantrip from the occult spell list. You can cast this cantrip as an occult innate spell at will, heightened to a spell level equal to half your level rounded up.</p>
