--- a/data/pathfinder-bestiary/dTz1SQvJIUsB9S2w.htm
+++ b/data/pathfinder-bestiary/dTz1SQvJIUsB9S2w.htm
@@ -1,9 +1,8 @@
 Name: Drow Fighter
-Nom: Guerrier drow
-État: changé
-État d'origine: officielle
+Nom: Guerrier Drow
+État: officielle
 
 ------ Description (en) ------
 Drow fighters train to master techniques that inflict deep, bleeding wounds and use poisoned crossbow bolts to exhaust enemies.<br /><br />
 ------ Description (fr) ------
-Les guerriers drows s’entraînent pour maîtriser les techniques permettant d’infliger des blessures profondes et utilisent des carreaux d’arbalète empoisonnés pour affaiblir leurs proies.<br><br>
+Les guerriers Drows s’entraînent pour maîtriser les techniques permettant d’infliger des blessures profondes et utilisent des carreaux d’arbalète empoisonnés pour affaiblir leurs proies.<br><br>
