--- a/data/pathfinder-bestiary/eQdLBzkluS1fvVC8.htm
+++ b/data/pathfinder-bestiary/eQdLBzkluS1fvVC8.htm
@@ -1,9 +1,8 @@
 Name: Caligni Dancer
-Nom: Danseur caligni
-État: changé
-État d'origine: officielle
+Nom: Danseur Caligni
+État: officielle
 
 ------ Description (en) ------
 Caligni dancers serve as intermediaries between caligni clans.<br /><br />
 ------ Description (fr) ------
-Les danseurs servent d’intermédiaires entre les clans calignis.<br><br>
+Les danseurs servent d’intermédiaires entre les clans Calignis.<br><br>
