--- a/data/pathfinder-bestiary/HeoH8hi5iieKPuJ2.htm
+++ b/data/pathfinder-bestiary/HeoH8hi5iieKPuJ2.htm
@@ -6,4 +6,4 @@ Nom: Mante meurtrière
 ------ Description (en) ------
 These gigantic mantids make their homes within deep jungles and prehistoric forests where they hunt and devour equally massive prey.<br /><br />
 ------ Description (fr) ------
-Ces mantes gigantesques résident dans les immenses jungles ou les forêts préhistoriques où elles se nourrissent de proies adaptées à leur taille.<br><br>
+Ces Mantes gigantesques résident dans les immenses jungles ou les forêts préhistoriques où elles se nourrissent de proies adaptées à leur taille.<br><br>
