--- a/data/pathfinder-bestiary/HFbZ580RDOG6Rxz2.htm
+++ b/data/pathfinder-bestiary/HFbZ580RDOG6Rxz2.htm
@@ -1,9 +1,8 @@
 Name: Sea Devil Baron
-Nom: Baron diable des mers
-État: changé
-État d'origine: officielle
+Nom: Baron Diable des mers
+État: officielle
 
 ------ Description (en) ------
 Unlike in many cultures, the highest-ranking sea devils are expected not just to wade into battle alongside their brethren, but to actively lead the campaign.<br /><br />
 ------ Description (fr) ------
-Contrairement à de nombreuses autres cultures, il est non seulement attendu des diables des mers de haut rang qu’ils combattent aux côtés des leurs, mais également qu’ils mènent les combats.<br><br>
+Contrairement à de nombreuses autres cultures, il est non seulement attendu des Diables des mers de haut rang qu’ils combattent aux côtés des leurs, mais également qu’ils mènent les combats.<br><br>
