--- a/data/pathfinder-bestiary/FaBHkmFGuEIqIYM1.htm
+++ b/data/pathfinder-bestiary/FaBHkmFGuEIqIYM1.htm
@@ -1,7 +1,6 @@
 Name: Drow Priestess
 Nom: Prêtresse drow
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Many drow priestesses venerate demon lords and other foul divinities.<br /><br />
