--- a/data/pathfinder-bestiary/gDMPUL0UiOHrUUd3.htm
+++ b/data/pathfinder-bestiary/gDMPUL0UiOHrUUd3.htm
@@ -1,5 +1,5 @@
 Name: Aasimar Redeemer
-Nom: Rédempteur aasimar
+Nom: Rédempteur Aasimar
 État: changé
 État d'origine: officielle
 
@@ -8,4 +8,4 @@ Nom: Rédempteur aasimar
 <hr />
 <p>Mortals whose ancestry has been influenced by celestials are known as aasimars, and angelkin, who have blood of angels coursing through their veins, are among the most common type of them. Many angelkin seek adventure as a means of doing good in the world.<br /><br /></p>
 ------ Description (fr) ------
-Les mortels dont la lignée a été influencée par les célestes sont connus sous le nom d’aasimars, et les angelins, qui ont du sang d’ange dans les veines, sont les plus fréquents. De nombreux angelins partent à l’aventure pour pouvoir faire le bien dans le monde.<br><br>
+Les mortels dont la lignée a été influencée par les célestes sont connus sous le nom d’Aasimars, et les angelins, qui ont du sang d’ange dans les veines, sont les plus fréquents. De nombreux angelins partent à l’aventure pour pouvoir faire le bien dans le monde.<br><br>
