--- a/data/pathfinder-bestiary/sf42HB8VsWGlYixP.htm
+++ b/data/pathfinder-bestiary/sf42HB8VsWGlYixP.htm
@@ -1,7 +1,6 @@
 Name: Ball Python
 Nom: Python boule
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 This nonvenomous snake's name comes from its tendency to curl into a ball when frightened, though most people know it for its hunting tactic of coiling around prey and crushing victims with its powerful muscles. Nonetheless, brave herpetologists sometimes keep ball pythons as pets.<br /><br />
