--- a/data/pathfinder-bestiary/ToSwRvspZ0IB7SHQ.htm
+++ b/data/pathfinder-bestiary/ToSwRvspZ0IB7SHQ.htm
@@ -1,9 +1,8 @@
 Name: Ghost Mage
 Nom: Mage fantôme
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 A wizard who died with a major project left undone might become a ghost mage, constantly seeking to finish its task in undeath.<br /><br />
 ------ Description (fr) ------
-Un magicien qui meurt avant l’aboutissement d’un projet majeur peut devenir un mage fantôme qui s’acharnera à terminer sa tâche dans la non-vie.<br><br>
+Un magicien qui meurt avant l’aboutissement d’un projet majeur peut devenir un Mage fantôme qui s’acharnera à terminer sa tâche dans la non-vie.<br><br>
